Begin adding HTML structure to About page, fix z-index issue that was clashing with the navigation

--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -2,6 +2,8 @@ nav {
   padding: $nudge;
   display: flex;
   justify-content: space-between;
+  position: relative;
+  z-index: 8999;
   ul {
     display: flex;
   }
